--- a/css/style.css
+++ b/css/style.css
@@ -393,7 +393,7 @@ input:hover
 }
 #Tw
 {
-	background: url(../images/Tw.png) no-repeat;
+	background: url(../images/tw.png) no-repeat;
 	background-size: cover;
 }
 #fb
@@ -403,6 +403,6 @@ input:hover
 }
 #Ig
 {
-	background: url(../images/Ig.png) no-repeat;
+	background: url(../images/ig.png) no-repeat;
 	background-size: cover;
 }
