--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ a
 {
 	width:200px;
 	height:200px;
-	background:url(../images/g1.jpg) no-repeat;
+	background:url(../images/center.jpg) no-repeat;
 	background-size:cover;
 	border: 1px groove white;
 	border-radius:180px;
