--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,12 @@ html
 {
 	scroll-behavior:smooth;
 }
+
 .bg-image
 {
 	height:110%;
 	background:url(../images/bg.jpg) no-repeat;
+	background-attachment:fixed;
 	background-size:cover;
 }
 /* menu bar */
@@ -43,12 +45,12 @@ html
 {
 	position:relative;
 	top:15px;
-	font-size:20px;
+	font-size:18px;
 	transition:0.5s;
 	background:blue;
 	color:white;
-	height:50px;
-	width:50px;
+	height:40px;
+	width:40px;
 	background:blue;
 	border-radius:180px;
 	display:flex;
@@ -154,18 +156,20 @@ a
 /*---Title Name---*/
 .title
 {
-	padding-top: 80px;
+	padding-top: 70px;
 	font-weight: bold;
 }
 
 /* ---About--- */
 .introduction
 {
-	font-size: large;	
+	font-size:larger;
+	line-height:30px;
+	
 }
 .img2
 {
-	box-shadow: 0px 0px 10px 4px blue;
+	box-shadow: 0px 0px 10px 4px lightblue;
 }
 
 .ab_table
@@ -214,8 +218,8 @@ a
 /*--Skills Section--*/
 .img3
 {
-	height: 200px;
-	width: 200px;
+	height: 150px;
+	width: 150px;
 }
 .skills h2
 {
@@ -344,7 +348,7 @@ a
 {
 	opacity:1;
 	margin-top: 25%;
-	color: blue;
+	color: white;
 	text-shadow:0px 2px 3px cyan;
 }
 .gallary:hover
@@ -386,7 +390,7 @@ input
 }
 .ImgIcon:hover
 {
-	box-shadow:0px 0px 7px 4px blue;
+	transform:rotateY(180deg);
 }
 #Wp
 {
